Issue #24285: fix importing extensions from packages